# QtpyDictator

./: .gitmodules  BBs_pyQt.Baalbek.py  QtUser.py  UI.txt  file.txt  main.py  myPyQtTest.py  profile.json  pyDictator.ui  pyDictatorQt.py  pyQt5Dictator.py  pyQt5Dictator.ui  pyQt6Dictator.py  pyproject.toml  q  test.py  test.txt  ui.txt  whyenv.py  whynot.py
