[tool.poetry]
name = "qtpydictator"
version = "0.1.0"
description = ""
authors = ["hoefkensj <hoefkens.j@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.7"
PyQt6 = "^6.4.0"
click = "^8.1.3"
rtmidi = "^2.3.4"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
